# django-admin-edit-mode

./: README.md  pyproject.toml  setup.py
django_admin_edit_mode/: __init__.py  admin.py  list_edit_mode.py
django_admin_edit_mode/templates/admin/: change_form_object_tools.html  change_list.html  edit_mode_button.html  readonly_mode_button.html  submit_line.html
